--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,2 @@
-.info{margin-top:20px}img{border-radius:40px}h1{font-size:3.5em;color:#035aa6}h2{font-size:2.5em;color:gray}p{font-size:1.5em}
+.info{margin-top:20px}img{border-radius:40px}h1{font-size:3.5em;color:#035aa6}h2{font-size:2.5em;color:gray}p{font-size:1.5em}footer{text-align:center;background-color:gray;color:white;padding-top:20px;padding-bottom:10px;margin-top:10px;margin-bottom:0px}
 /*# sourceMappingURL=style.css.map */
