--- a/css/style.scss
+++ b/css/style.scss
@@ -17,3 +17,12 @@ h2{
 p{
 	font-size: 1.5em;
 }
+footer{
+	text-align: center;
+	background-color: gray;
+	color: white;
+	padding-top: 20px;
+	padding-bottom: 10px;
+	margin-top: 10px;
+	margin-bottom: 0px;
+}
